# Robomaster-skyteam

./: README.md  视觉梯队学习
2021寒假视觉组梯队学习计划/: readme.md
2021寒假视觉组梯队学习计划/Img/: readme.md
2021寒假视觉组梯队学习计划/第0周 学习方式介绍及环境配置/: readme.md
2021寒假视觉组梯队学习计划/第一周 python基础入门/: 01.变量、运算符与数据类型.md  02.位运算.md  03.条件语句.md  04.循环语句.md  05.异常处理.md  06.列表.md  07.元组.md  08.字符串.md  09.字典.md  10.集合.md  11.序列.md  12.函数与Lambda表达式.md  13.类与对象  14.魔法方法.md  15.模块.md  16.datatime模块.md  17.文件与文件系统.md  readme.md  (+1 more)
Automatic_infantry_robot/: readme.md
Automatic_infantry_robot/ROS_original_notes/catkin_ws/src/my_slam_gmapping/: CMakeLists.txt
Automatic_infantry_robot/ROS_original_notes/catkin_ws/src/my_slam_gmapping/launch/: auto_slam.launch
Automatic_infantry_robot/ROS_original_notes/catkin_ws/src/my_slam_gmapping/src/part_data/lidar_undistortion/: lidar_undistortion.h
Automatic_infantry_robot/ROS_original_notes/catkin_ws/src/my_slam_gmapping/src/part_ros/: my_slam_gmapping.cpp  my_slam_gmapping.h
Automatic_infantry_robot/ROS_original_notes/catkin_ws/src/my_slam_gmapping/src/part_slam/grid/: harray2d.h
Automatic_infantry_robot/ROS_original_notes/catkin_ws/src/my_slam_gmapping/src/part_slam/gridfastslam/: gridslamprocessor.cpp
Automatic_infantry_robot/ROS_original_notes/catkin_ws/src/my_slam_gmapping/src/part_slam/particlefilter/: particlefilter.h
Automatic_infantry_robot/ROS_original_notes/catkin_ws/src/my_slam_gmapping/src/part_slam/scanmatcher/: gridlinetraversal.h
Automatic_infantry_robot/ROS_original_notes/catkin_ws/src/my_slam_gmapping/src/part_slam/sensor_range/: rangereading.cpp
Automatic_infantry_robot/ROS_original_notes/catkin_ws/src/my_slam_gmapping/src/part_slam/utils/: point.h
Automatic_infantry_robot/ROS_original_notes/slam_car/建图导航测试/my_slam_gmapping/: package.xml
Automatic_infantry_robot/ROS_original_notes/slam_car/建图导航测试/my_slam_gmapping/launch/: my_slam_gmapping.launch
Automatic_infantry_robot/ROS_original_notes/slam_car/建图导航测试/my_slam_gmapping/src/part_data/lidar_undistortion/: lidar_undistortion.cpp
Automatic_infantry_robot/ROS_original_notes/slam_car/建图导航测试/my_slam_gmapping/src/part_ros/: main.cpp
Automatic_infantry_robot/ROS_original_notes/slam_car/建图导航测试/my_slam_gmapping/src/part_slam/grid/: array2d.h  map.h
Automatic_infantry_robot/ROS_original_notes/slam_car/建图导航测试/my_slam_gmapping/src/part_slam/gridfastslam/: gridslamprocessor.h
Automatic_infantry_robot/ROS_original_notes/slam_car/建图导航测试/my_slam_gmapping/src/part_slam/motionmodel/: motionmodel.cpp  motionmodel.h
Automatic_infantry_robot/ROS_original_notes/slam_car/建图导航测试/my_slam_gmapping/src/part_slam/scanmatcher/: scanmatcher.cpp  scanmatcher.h
Automatic_infantry_robot/ROS_original_notes/slam_car/建图导航测试/my_slam_gmapping/src/part_slam/sensor_range/: rangereading.h
Doc/: readme.md
Team_selection/: readme.md
(+54 files in other folders)
